core/testData/annotator/perl/unreachableCode/lastEvalWithLabel.code
'start';
sub ExceptionFunction {
    'sub start';
    eval {
        'eval start';
        last SOMELABEL;
    };
    '<error descr="Unreachable code">sub end</error>';
}
'end';
